# iau-proposal-mcp

./: README.md  pyproject.toml
src/proposal_writer_iau_mcp/: __init__.py  loader.py  papers.py  resources.py  server.py  tools.py  validator.py
src/proposal_writer_iau_mcp/data/: endnote.md  mistakes.md  template.md
src/proposal_writer_iau_mcp/data/rules/: 10.md  11.md  12.md  13.md  14.md  4.md  5.md  6.md  7.md  8.md  9.md  overview.md
