[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proposal-writer-iau-mcp"
version = "0.1.0"
description = "MCP server for IAU Isfahan (Khorasgan) Computer Dept — academic proposal writing, review, and section management"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
proposal-writer-iau-mcp = "proposal_writer_iau_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/proposal_writer_iau_mcp"]
